[package]
name = "trace-error"
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Extensions to Rust's error system to automatically include backtraces"
repository = "https://github.com/novacrazy/trace-error"
readme = "README.md"
version = "0.1.5"
license = "MIT"
keywords = ["backtrace", "error", "result"]
categories = ["rust-patterns"]
documentation = "https://docs.rs/trace-error/"

[dependencies]
backtrace = "0.3.0"
